# Project-Nightingale-V2

./: .dockerignore  .env  .pre-commit-config.yaml  README.md  URL Scanner Project Structure.docx  docker-compose.yml  package-lock.json  package.json  requirements.txt  setup_dev.ps1  setup_dev.sh
.cursor/: scratchpad.md
.cursor/rules/: planningandschema.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.idx/: dev.nix
backend/: .flake8  Dockerfile  config.py  main.py  main_minimal.py  main_production.py  pyproject.toml  requirements.txt  scanner_engine.py  shared_state.py  test_ssrf_scanner.py
backend/api/: __init__.py  metrics.py  routes.py  (+5 more)
frontend/: .dockerignore  .env  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  webpack.config.js
nightingale-ui/: package.json
scanner-backend/: .gitignore  Dockerfile  README.md  celeryconfig.py  pyproject.toml  requirements.txt
scanner-backend/app/: auth.py  broadcast.py  config.py  db.py  main.py  models.py  report.py  tasks.py  worker.py
scanner-backend/app/modules/: __init__.py  csrf_token.py  dir_listing.py  insecure_headers.py  open_redirect.py  sqli_module.py  verbose_error.py  weak_basic_auth.py  weak_password.py  x_content_type.py  xss_module.py
scanner-backend/app/templates/: report.html
scanner-backend/tests/: conftest.py  test_api.py  test_sqli_module.py  test_websocket.py
scanner-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  styles.css
tests/: test_scanners.py
(+219 files in other folders)
