[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner-backend"
version = "0.1.0"
description = "Security scanner backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "httpx",
    "uvicorn"
]

[project.entry-points."scanner.modules"]
sqli = "app.modules.sqli_module:SQLiModule"
xss = "app.modules.xss_module:XSSModule" 